ng/flux/apps/umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
spec:
  selector:
    app: umami
  ports:
    - name: http
      port: 3000
      targetPort: 3000
